--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,20 @@
+.DS_Store
+
 node_modules
-yarn-error.log
+
+*.log
+yarn-error.log*
+yarn-debug.log*
+
 dist/
+
+coverage
+
+.eslintcache
+
+*.tgz
+
+.yarn-integrity
+
+.env
+
