--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,22 +1,35 @@
 name: Tests
-on: [push]
+
+# on: [push]
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
+
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [12.x, 14.x, 16.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
     steps:
-    # Checks-out the repository under $GITHUB_WORKSPACE
-    - uses: actions/checkout@v2
+      # Checks-out the repository under $GITHUB_WORKSPACE
+      - uses: actions/checkout@v2
 
-    # Install Node Js
-    - name: Use Node.js 12.x
-      uses: actions/setup-node@v1
-      with:
-        node-version: 12.x
-        
-    # Install Node Modules
-    - name: Install Node Modules
-      run: yarn install --frozen-lockfile
+      # Install Node Js
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
 
-    # Runs a set of commands using the runners shell
-    - name: Runs Unit Tests
-      run: yarn test
+      # Install Node Modules
+      - name: Install Node Modules
+        run: yarn install --frozen-lockfile
+
+      # Runs a set of commands using the runners shell
+      - name: Runs Unit Tests
+        run: yarn test
