--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "tstrap",
-  "version": "0.1.0",
+  "name": "efi-payment-token",
+  "version": "0.0.1",
   "main": "dist/index.js",
   "types": "./dist/types.d.ts",
-  "author": "GozaRuu <kais.sghari@gmail.com>",
+  "author": "Cláudio Medeiros <klawdyo@gmail.com>",
   "license": "MIT",
   "scripts": {
     "build": "tsc",
@@ -12,17 +12,6 @@
     "test:coverage": "jest --collectCoverageFrom=src/**/*.ts --coverage",
     "lint:list": "eslint */**/*.js --fix",
     "format": "prettier --write \"./**/*.{js,ts,json}\""
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "tsc --noEmit && lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{js,ts}": [
-      "prettier --write",
-      "eslint --cache --fix"
-    ]
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
@@ -44,5 +33,9 @@
     "ts-jest": "^26.4.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "axios": "^1.3.4",
+    "jsencrypt": "^3.3.2"
   }
 }
